loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:1: error: value ! is not a member of Int
while (getX() != 14 & getY()! 8) {
                            ^