loopfor.LoopStairs.scala.code
while (getX() != 14 & getY()! 8) {
  if (!isFacingWall()){
    forward()
    forward()
    forward()
  }
  else {
    left()
    forward()
    right()
    forward()
  }
}